# GCanvas

./: .gitignore  .travis.yml  package.json
core/src/: GCanvas.hpp  GCanvasWeex.hpp  GExport.h
core/src/gcanvas/: GCanvas2dContext.cpp  GConvert.h  GFontStyle.h  GGL.h  GPoint.h
core/src/platform/Android/: GFontFamily.h  GFrameBufferObjectImpl.cpp
core/src/support/: CharacterSet.h  Log.h
ios/GCanvas/GCanvas.xcodeproj/: project.pbxproj
node/: CMakeLists.txt  README.MD  export.js  package.json
node/binding/: Canvas.cc  Canvas.h  CanvasGradient.cc  CanvasPattern.cc  CanvasPattern.h  CanvasRenderingContext2D.cc  CanvasRenderingContext2D.h  CanvasRenderingContextWebGL.cc  Export.cc  Image.cc  Image.h  ImageData.cc  ImageData.h  ImageWorker.cc  ImageWorker.h
node/binding/cairo/: Backends.cc  Backends.h  CairoCanvas.cc  CairoCanvas.h  CairoCanvasGradient.cc  CairoCanvasGradient.h  CairoCanvasPattern.cc  CairoCanvasPattern.h  CairoCanvasRenderingContext2d.cc  CairoCanvasRenderingContext2d.h  CairoImage.cc  CairoImage.h  CairoImageData.cc  CairoImageData.h  Canvas.cc  Canvas.h  CanvasGradient.cc  CanvasGradient.h  CanvasPattern.cc  CanvasPattern.h  Image.cc  Image.h  ImageAsyncWorker.cc  ImageAsyncWorker.h  ImageData.cc  ImageData.h  PNG.h  PatternCairo.cc
node/binding/cairo/backend/: Backend.cc  Backend.h  CairoImageBackend.cc  ImageBackend.cc  ImageBackend.h
node/binding/renderContext/: Context2DBase.cc  Context2DBase.h  GRenderContext.cc  GRenderContext.h  GradientBase.cc  GradientBase.h  ImageBase.cc  ImageBase.h  ImageDataBase.cc  ImageDataBase.h  PatternBase.cc  PatternBase.h
node/binding/renderContext/cairo/: Context2DImplCairo.cc  Context2DImplCairo.h  GradientImplCairo.cc  GradientImplCairo.h  ImageBackendCairo.cc  ImageBackendCairo.h  PatternImplCairo.cc  PatternImplCairo.h
node/binding/renderContext/gcanvas/: Context2DImplGCanvas.cc  Context2DImplGCanvas.h  ImageDataImplGCanvas.cc  ImageDataImplGCanvas.h  PatternImplGCanvas.cc  PatternImplGCanvas.h
node/binding/util/: NodeBindingUtil.cc  NodeBindingUtil.h
node/binding/webgl/: WebGLActiveInfo.h  WebGLBuffer.h  WebGLFrameBuffer.h  WebGLProgram.h  WebGLRenderBuffer.h  WebGLShader.h  WebGLTexture.h  WebGLUniformLocation.h
node/docker/: Dockerfile
node/examples/: app.js  appjpeg.js  brush.js  clip.js  clock.js  drawcanvas.js  fill-evenodd.js  font.js  fontFamily.js  fontStroke.js  globalAlpha.js  globule.js  gradients.js  grayscale-image.js  image-exception.js  image-jpeg.js  image.js  imageCachedCanvas.js  imageone.js  kraken.js  pathShadowFill.js  pathShadowStroke.js  pattern.js  ray.js  resize.js  spark.js  state.js  text.js  todataurl-jpeg.js  todataurl.js  transform.js  transfrom.js  twocanvas.js
node/image/: ImageCahced.h
node/renderContext/: GRenderContext.cc  GRenderContext.h
node/script/: install.sh
node/util/: NodeBindingUtil.cc
